[package]
name = "bokken-runtime"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Dependencies for compiling solana program under the Bokken enviroment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "0.9", features = ["const-generics"]}
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
num-traits = "0.2"
solana-program = "1.13"
bytemuck = "1.9"
lazy_static = "1.4.0"
bpaf = { version = "0.7", features = ["derive"] }
color-eyre = "0.5"
base64 = "0.13"
itertools = "0.10"
