[package]
name = "bokken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "0.9", features = ["const-generics"]}
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
num-traits = "0.2"
solana-sdk = "~1.13"
bokken-runtime = { path = "../solana-debug-runtime" }
bytemuck = "1.9"
bpaf = { version = "0.7", features = ["derive"] }
color-eyre = "0.5"
jsonrpsee = { version = "0.16", features = ["server", "macros"] }
async-trait = "0.1"
serde = "1.0"
bs58 = "0.4"
base64 = "0.13"
bincode = "1.3"
lazy_static = "1.4"
async-recursion = "1.0"
