[package]
name = "test-program-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bokken-runtime = {path = "../solana-debug-runtime"}
test-program = {path = "../test-program"}
tokio = "1.0"
color-eyre = "0.5"
